[[:Kategorie:Eanske]] derbie edaon ([[Wikipedia:HotCat|HotCat.js]])

--- a/De_Museumfabriek.mw
+++ b/De_Museumfabriek.mw
@@ -19,3 +19,4 @@ Nöast t vaste Grote Verhaal van Twente, hef De Museumfabriek ok wisselnde tento
 [[Kategorie:Geschiedenis van Tweante]]
 [[Kategorie:Nedersaksiese organisasie]]
 [[Kategorie:Museum in Oaveriessel]]
+[[Kategorie:Eanske]]
