*Empty MediaWiki Message*

--- a/Grammofoonmuseum.mw
+++ b/Grammofoonmuseum.mw
@@ -1,5 +1,5 @@
 [[Ofbeelding:Perpetuum_Ebner_PE38.jpg|thumb|300px|Een elektrische platenspeuler (niet uut de verzameling van 't Grammofoonmuseum)]]
-'t '''Grammofoonmuseum''' is een museum in de [[Aoveriessel|Aoveriesselse]] plaatse [[Neilusen]]. 't Is as stichting opericht in 2002 en kump voort uut de particuliere verzameling van eigenaar Jelle Bos.
+'t '''Grammofoonmuseum''' is een museum in de [[Aoveriessel|Aoveriesselse]] plaatse [[Neilusen]]. 't Is in 2002 opericht as stichting en kump voort uut de privéverzameling van eigenaar Jelle Bos.
 
 ==Verzameling==
 't Grammofoonmuseum hef een fikse verzameling [[platenspeuler|platenspeulers]], [[grammofoonplate|grammofoonplaten]], [[bandrecorder|bandrecorders]] en [[microfoon|microfoons]]. Wieder is der gerei as naoldendeusies, speuldeuzen, miniatuurgrammofoons en [[picturedisc|picturediscs]]. Ok bint der twee [[jukebox|jukeboxen]] te bekieken en beluustern.
@@ -7,9 +7,9 @@
 't Museum gef lezings veur clubs en groepen, en warkt mit an alderhaande evenementen en prissentaoties waor antiek en historisch geluud gewenst is. 
 
 ==Plannen==
-Veur de periode 2020-2025 is 't museum op zuuk naor neie huusvesting van de gruiende verzameling. Ok wil de stichting warken an instandholding van de verzameling en 't brieder toegaankelijk maken dervan.
+Veur de periode 2020-2025 wördt der ezöcht naor neie huusvesting veur de gruiende verzameling. Ok wil de stichting warken an instandholding van de verzameling en 't brieder toegaankelijk maken dervan.
 
-Veur schoelen wördt der ewarkt an een veurlichtingsprogramma aover de geschiedenis van de opname en weergave van geluud.
+Veur schoelen wördt der ewarkt an een veurlichtingsprogramma aover de geschiedenis van 't opnemen en weergeven van geluud.
 
 ==Uutgaonde verwiezing==
 * [http://grammofoonmuseum.nl/ Webstee van 't Grammofoonmuseum]
