--- a/Kannede.mw
+++ b/Kannede.mw
@@ -2,7 +2,7 @@
 {{Laandtabel-stl |
 | naemeinlaanstael = Canada
 | vlagge = [[Bestaand:Flag of Canada.svg|120px|Vlagge van Kannede]]
-| waopen = [[Bestaand:Coat_of_arms_of_Canada.svg|120px|Waopen van Kannede]]
+| waopen = [[Bestaand:Coat of arms of Canada rendition.svg|120px|Waopen van Kannede]]
 | lekaosie = LocationCanada.png
 | breedtegroad=56///N | lengtegroad=105///W | region=CA
 | taelen = [[Engels]] en [[Frans|Fraans]]
