Verwysing nå döärverwyssyde repareerd ([[Grunningen]] nå [[Grunnen (provìnzie)]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Hannekemäiers.mw
+++ b/Hannekemäiers.mw
@@ -1,6 +1,6 @@
 De '''hannekemäiers''' waren seisuunswarkers uut [[Duutslaand|Düütskland]] (vöäral uut [[Westfalen|Westfalen]] en et Gråvskap Lingen in de 17. töt an de 19. eywe) din in et [[zomer|summer]] med de beynenwagen up [[Nederland|Neaderland]] up an kwamen ümme up et land te warken gån. De term hannekemäier kümt van de name Johannes, vake of-ekörted as Hannes en dat hebbet sy van den dag van traditionele in-deensttreading, [[Sünt-Johannesdag]] (24 juni).
 
-De eyrste hannekemäiers kwamen üm grös te mäien. Toon as sy döärkreagen dat neaderlanders wal de düütske koupwaar hebben wolden, begünnen sommige ''hollandgängers'' ümme wat meyr geld te verdenen disse verkouperyen up de rügge in manden med te sjouwen. In [[Grunningen|Grönningen]] wörden disse lüde ''kypkearls'' (kyp is mande) en ''fälings'' (Westfalers) enöömd.
+De eyrste hannekemäiers kwamen üm grös te mäien. Toon as sy döärkreagen dat neaderlanders wal de düütske koupwaar hebben wolden, begünnen sommige ''hollandgängers'' ümme wat meyr geld te verdenen disse verkouperyen up de rügge in manden med te sjouwen. In [[Grunnen (provìnzie)|Grönningen]] wörden disse lüde ''kypkearls'' (kyp is mande) en ''fälings'' (Westfalers) enöömd.
 
 Når skatting 140.000 uut et nudaagske Düütskland ofkummende hannekemäiers hebbet sich tüssen 1815 en 1850 blyvend in Neaderland esetteled.
 
