--- a/Winter_Guard_International.mw
+++ b/Winter_Guard_International.mw
@@ -1,7 +1,7 @@
 [[Ofbeelding:Intension.png|thumb|200px|De groep Intension oet [[Marum]] in [[Grönnen|Grönningn]]]]
 '''Winter Guard International''', vuural bekeand en vuur t gemak of ekörtt töt '''WGI''', is de opvolger van de in [[1977]] op erichte Indoor [[Colorguard]]wedstriedn. WGI is ne organisasie wat wedstriedn en kompetisies opsteelt vuur visueel opvoordne keunste. De noadruk lig hierbie op [[colorguards]] (vlagndreeiers) en seend n antal joar op [[indoor percussion]] (slagwoark binnshoes). De wedstriedn wordt eheuldn in de [[Verenigde Stoaten|VS]] en [[Kanada]]. t Heuwdkantoor van WGI zit in [[Dayton]], [[Ohio]].
 
-WGI is op ericht duur zes leu in [[San Francisco]]: Don Angelica oet Niej Jersey, Shirlee Whitcomb oet Zuud-[[Kalifornië]], Stanly Knaub oet [[Seattle]] in [[Washington]], Bryan Johnston en Marie Czapinski oet [[Chicago]] in [[Illinois]] en Lynn Lindstrom oet [[Arlington Heights]] in [[Illinois]]. Zee richten de eerste klasse van WGI op, de ofdeling Vlagndreein. De tweede klasse, [[indoor percussion]], wör pas in 1992 op ericht.
+WGI is op ericht duur zes leu in [[San Francisco]]: Don Angelica oet Niej Jersey, Shirlee Whitcomb oet Zuud-[[Kalifornië]], Stanly Knaub oet [[Seattle]] in [[Washington (stoat)|Washington]], Bryan Johnston en Marie Czapinski oet [[Chicago]] in [[Illinois]] en Lynn Lindstrom oet [[Arlington Heights]] in [[Illinois]]. Zee richten de eerste klasse van WGI op, de ofdeling Vlagndreein. De tweede klasse, [[indoor percussion]], wör pas in 1992 op ericht.
 
 WGI wör op ericht as ne extra wedstriedverbaand tusken de hoogseizoenn duur. De leu dee't metdoot an WGI, komt vake oet n [[Drum & Bugle Corps]]. Disse korpsn doot in de weentermoanden nit zovölle. Vandoar at dr as teegnhanger vuur de leefhebbers wat in t weenter organiseerd is. Ook umdet de colorguards en t slagwoark vake ne oonderstönnde rolle hebt, is WGI de geleagnheaid um as colorguard of slagwoarkgroep es echt te loatn zeen wa'j in hoes hebt.
 
