Verwysing nå döärverwyssyde repareerd ([[Grunnen]] nå [[Grunnen (provìnzie)]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Buurtschop.mw
+++ b/Buurtschop.mw
@@ -1,5 +1,5 @@
-[[Ofbeelding:Noordpolderzijl (plaats).jpg|250px|thumb|right|[[Polderziel]] is een buurtschop in [[Grunnen]].]]
-[[Ofbeelding:Johanneskerk Twekkelo-1.jpg|250px|thumb|right|Buurtschoppen heb vaeke een klein kearkske, als deze in [[Twekkel]].]]
+[[Ofbeelding:Noordpolderzijl (plaats).jpg|250px|thumb|[[Polderziel]] is een buurtschop in [[Grunnen (provìnzie)|Grunnen]].]]
+[[Ofbeelding:Johanneskerk Twekkelo-1.jpg|250px|thumb|Buurtschoppen heb vaeke een klein kearkske, als deze in [[Twekkel]].]]
 Een '''buurtschop''' is een [[woonplak]] die niet officieel anschreven is as een woonplak. Krek as [[gehucht]]en wodden buurtschoppen meerstal op [[laandkaorte]]n angeven, mar ze bin in tegenstelling tot gehuchten niet in de officiële staotkundige postkodeplakken as zelsstaandige buurt of dörp opneumen. Vaeke is dat omdat straotnaemen en nommers hierveur omschrievend genog binnen.
 
 Buurtschoppen bin vaeke in de volksmond ontstaon, as benaeming veur de lekaosie van een verzaemeling van [[huus|huzen]], [[boerderieje|boerderi'jen]] of [[meule]]ns. Dit wodde ok wel een [[nederzetting]] nuumd. Vule van de oolde buurtschoppen bin ontstaon in gebieden/poolders waor ze vri'j weren om te wonen; zokke gebieden wodden ok wel een ''hering'' nuumd. Omdat et vri'j was, was d'r dan ok gien zeggenschop van of over zoe'n plak. Dit in tegenstelling tot een buurschop of een boerschop, waor een heer of boeren zeggenschop hadden van of over et plakkien. Somstieden wodde een buurschop of boerschop opheven en dan wodde et een buurtschop of gehucht as et klein genog was. Zo hiel of en toe wodden et ok dörpen of steden.
