--- a/Portoal:Grunnen.mw
+++ b/Portoal:Grunnen.mw
@@ -1,7 +1,7 @@
-{| cellspacing=3px style="background:floralwhite"
+{| cellspacing="3px" style="background-color:floralwhite"
 |- valign="top"
-|width="50%" align=center style="border: 3px solid lightsalmon; background-color:floralwhite padding:0.5em"|
-<br /><center>[[Ofbeelding:Flag_Groningen.png|75px|Vlage van Grunnen]]&nbsp;&nbsp;&nbsp;&nbsp;<font face="Trebuchet MS" size="6.8"> Portoal: Grunnen</font>&nbsp;&nbsp;&nbsp;&nbsp;[[Ofbeelding:Flag_Groningen.png|75px|Vlage van Grunnen]]</center><br />
+|width="50%" align="center" style="border: 3px solid lightsalmon; background-color:floralwhite; padding:0.5em; text-align:center; font-family:'Trebuchet MS',sans-serif; font-size:229%"|
+[[Ofbeelding:Flag_Groningen.png|75px|border|Vlage van Grunnen]]&nbsp;&nbsp;&nbsp;&nbsp; Portoal: Grunnen&nbsp;&nbsp;&nbsp;&nbsp;[[Ofbeelding:Flag_Groningen.png|75px|border|Vlage van Grunnen]]
 |}
 
 __NOTOC__ __NOEDITSECTION__
@@ -14,7 +14,7 @@ __NOTOC__ __NOEDITSECTION__
 
 |width="50%" bgcolor=ivory style="border-style:solid;border-width:1px;border-color:silver;padding:1em;padding-top:0;"|
 <h3>Wozzen joe dat:</h3>
-* ...t Grunneger boertje '[[Popko]]' sinds 2011 t Grunneger beeldmaark is van Stad en pervìnzie [[Grunnen]]?
+* ...t Grunneger boertje '[[Popko]]' sinds 2011 t Grunneger beeldmaark is van [[Grunnen (stad)|Stad]] en [[Grunnen (provìnzie)|pervìnzie Grunnen]]?
 * ...in de [[Westerkwartaaier|Westerkwartaaierse]] dörpen [[Moarum]], [[De Wilp]] en [[De Penne (Grönnen)|De Penne]] nog aal [[Frais]] proat wordt?
 * ...de [[Stad Grunnen]] in de vrouge [[Middelaiwen]] n [[Drenthe|Drìnts]] esdörp was?
 * ...de [[Dollert]] vrouger tot [[Winschoot]] tou rekde en dat [[Blaauwe stad]] doar nou ligt?
