Verwysing nå döärverwyssyde repareerd ([[Groningen]] nå [[Grunnen (stad)]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Metropool.mw
+++ b/Metropool.mw
@@ -2,11 +2,9 @@ Ne '''Metropool''' is ([[Oldgryks]] μήτηρ mētēr = moder, πόλις póli
 
 Ne dargelyke stad vörmt våk et middelpünt van ne regio op polityk, weatenskaplik, kultürel en sosial nivo. Bekende vörbeylden van metropolen bünt [[Londen]], [[Paries|Parys]], [[Tokio]], [[Sjanghai]] en [[Niej-York|Ny Jork]]. 
 
-De andüdingen <nowiki>''</nowiki>metropool<nowiki>''</nowiki> en <nowiki>''</nowiki>[[Stad (woonstee)|wearldstad]]<nowiki>''</nowiki> wörd våk synonym an mekare ebrükt. Metropolen bünt åver et algemeyn steydelike gebyden met meyr as 1 miljuun inwöäners. Et wöärd metropool wörd ok wal, in teagenstelling töt et wöärd wearldstad, dat internasionål as absolüt begrip wörd ebrükt, betrekklik ebrükt üm de relasy van ne stad met de ümliggende ümgeaving an te geaven, zo is [[Groningen]] <nowiki> ''de metropool van et noorden''</nowiki>. Et begrip metropool wörd ok ebrükt üm steyden an te geaven wår as ne bepålde aktiviteyt ov bedryvstak völ vörkümt, zo as <nowiki> ''künstmetropool'' ov ''finansjele metropool''</nowiki>.
+De andüdingen "metropool" en "[[Stad (woonstee)|wearldstad]]" wörd våk synonym an mekare ebrükt. Metropolen bünt åver et algemeyn steydelike gebyden met meyr as 1 miljuun inwöäners. Et wöärd metropool wörd ok wal, in teagenstelling töt et wöärd wearldstad, dat internasionål as absolüt begrip wörd ebrükt, betrekklik ebrükt üm de relasy van ne stad met de ümliggende ümgeaving an te geaven, zo is [[Grunnen (stad)|Groningen]] "de metropool van et noorden". Et begrip metropool wörd ok ebrükt üm steyden an te geaven wår as ne bepålde aktiviteyt ov bedryvstak völ vörkümt, zo as "künstmetropool" ov "finansjele metropool".
 
 Vör de steiging in de konsentrasy van weatenskap, polityk ov kultür binnen ne gebyd ov stad wörd et wöärd ''metropolisering'' ebrükt. Met dit begrip wörd skonwal soms ok [[versteydliking]] anedüd. 
-
-==Vöärbeylden van metropolen åver de wearld==
 
 {{Dialekt|act}}
 [[Kategorie:Geografie]]
