Verwysing nå döärverwyssyde repareerd ([[Grönningn]] nå [[Grunnen (provìnzie)]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Jazz.mw
+++ b/Jazz.mw
@@ -1,4 +1,4 @@
-[[Bestaand:Louis Armstrong restored.jpg|thumb|right|300px|[[Louis Armstrong]], een van de bekeandste artiestn van de vroge Jazz]]
+[[Bestaand:Louis Armstrong restored.jpg|thumb|300px|[[Louis Armstrong]], een van de bekeandste artiestn van de vroge Jazz]]
 
 '''Jazz''' is n [[meziek]]stiel den ongevear um en noabiej t begin van n [[20e eeuw|20sten eeuw]] is begunn in [[New Orleans]], [[Louisiana]], [[Verienigde Staoten van Amerika|Verenigde Stoatn]]. t Is nen mengeling tusken verskilnde [[Afrikaans Amerikaans]]e, en Westerse stieln. t Is vuural bekeand um t völle improviseern (op de stea verzinn) wat de [[muzikaant]]n doot. Det hef zinn oorsproonk in t geval det de eerste jazz-muzikaantn zikzelf spöln eleard hadn en dus ginnen [[noot]] van papier leazn konn.
 
@@ -48,15 +48,15 @@ In Eanske is ne rieke jazzgeskiedenisse te veendn. Det keump oonder mear duurdet
 
 In [[Deawnter]] wörd alle joarn t ''Deventer Jazzfestival'' op ezat. Hier ligt t zwöartepeunt heuwdzakelik op ankomnde taleantn. t Festival hef n breed anbod van verskilnde jazzsoortn, blues en soul. In [[Goor]] wörd alle joarn met [[Poasken]] t Goorse Bigband Festival organiseerd. Hier komt verskilnde [[bigband]]s oet heel Nederlaand striedn vuur ne jury. Tuskenduur spölt vake blues- of dixieland jazzbandkes.
 
-Ne vuuranstoande jazz-zängeresse is [[Martijje Lubbers|Martijje!]] oet [[Dreante]]. Zee hef as eerste Jazz met de Dreantse sproake saamn evoognd en t ''Drezz ''eneumd. Wieters hef [[Jan Glas]] oet [[Grönningn]] verskilnde jazznommers in t [[Grönnings]] op enömn.
+Ne vuuranstoande jazz-zängeresse is [[Martijje Lubbers|Martijje!]] oet [[Dreante]]. Zee hef as eerste Jazz met de Dreantse sproake saamn evoognd en t ''Drezz ''eneumd. Wieters hef [[Jan Glas]] oet [[Grunnen (provìnzie)|Grönningn]] verskilnde jazznommers in t [[Grönnings]] op enömn.
 
 == Eksterne verbeendingn ==
-* [http://www.jazz.nl Jazz.nl]
-* [http://www.jazzmasters.nl Jazzmasters.nl]
+* [http://www.jazz.nl/ Jazz.nl]
+* [http://www.jazzmasters.nl/ Jazzmasters.nl]
 
 Jazz-bands:
-* [http://www.dscband.nl Dutch Swing College Band]
-* [http://www.dokterjazz.nl Dokter Jazz]
+* [http://www.dscband.nl/ Dutch Swing College Band]
+* [http://www.dokterjazz.nl/ Dokter Jazz]
 {{Dia|Disse bladziede is eskreeuwn in t [[Riesns]]}}
 
 [[Kategorie:Tweants artikel]]
