Verwysing nå döärverwyssyde repareerd ([[Grönningn]] nå [[Grunnen (provìnzie)]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Otter.mw
+++ b/Otter.mw
@@ -1,4 +1,4 @@
-[[Bestaand: Lutra.lutra.standing.1.jpg|thumb|200px|Nen Otter op de achterste bene]]
+[[Bestaand:Lutra.lutra.standing.1.jpg|thumb|200px|Nen Otter op de achterste bene]]
 
 n '''Otter''' (''Lutra lutra''), ook wal '''Europesen otter''' of '''visotter''' neumd, is dr ene van de [[marters]]oortn, met zwempeute en nen doonkern, dichten, broenen vacht. Disse ottersoort is met ofstaand t meest wiedverspreid, vuural in n groot deel van [[Europa (continent)|Europa]] en [[Azië]].
 
@@ -44,7 +44,7 @@ Duurdet dit deer geveulig is vuur versmearing van zin leafgebeed, is t anwezig w
 * n Antal otters wördn dood ejag.
 * t Kan ook wean at dr otters oet [[Duutslaand]] gewoon oet zikzelf noar Neerlaand komt.
 
-Dit leste lik t geval in [[Tweante]] en n [[Achterhook]]. Januwoari [[2012]] was in t niejs at dr in en um de [[Regge]] en de [[Vechte]] bie [[Hankate]] en en de [[Berkel]] spoers en driete van n männeke veundn zeent.<ref>[http://www.landschapoverijssel.nl/home/nieuws/otter-terug-in-de-regge.html Landschapoverijssel.nl - Otter terug in de Regge.] Maakt: 6 januwoari 2012. Bekekn: 15 januwoari 2012</ref> Dr zeent al dree gennerasies in de [[Wieden|Wiedn]] en [[Wearribn]]. Dr zeent in verhoolding völle vröwkes. Dee reaizet nooit echt vear, dus de kaans op verkearsongelukn is kleainder. Ook bie t [[Ketelmear]] en de [[Lindediek]] in Freeslaand hebt ze otters zeen, en ook in [[Grönningn]]. 
+Dit leste lik t geval in [[Tweante]] en n [[Achterhook]]. Januwoari [[2012]] was in t niejs at dr in en um de [[Regge]] en de [[Vechte]] bie [[Hankate]] en en de [[Berkel]] spoers en driete van n männeke veundn zeent.<ref>[http://www.landschapoverijssel.nl/home/nieuws/otter-terug-in-de-regge.html Landschapoverijssel.nl - Otter terug in de Regge.] Maakt: 6 januwoari 2012. Bekekn: 15 januwoari 2012</ref> Dr zeent al dree gennerasies in de [[Wieden|Wiedn]] en [[Wearribn]]. Dr zeent in verhoolding völle vröwkes. Dee reaizet nooit echt vear, dus de kaans op verkearsongelukn is kleainder. Ook bie t [[Ketelmear]] en de [[Lindediek]] in Freeslaand hebt ze otters zeen, en ook in [[Grunnen (provìnzie)|Grönningn]]. 
 
 Ze weelt non otters oet goan zetn in de [[Alde Feanen]] in Freeslaand. Doarvuur zöalt foeknviskers nen stop in öare foekn mutn maakn en roond de weagn zal de natuur an epast mutn wordn. Umdet otters völle roondtrekt, hebt otters [[natuurverbeending]]s neudig. Ze kriegnt loopplaankn en pädte oonder brugn duur. Disse vuurzienings mut regelmoatig oonderhooldn wordn, aanders köant ze ze nit mear veendn en gebroekn.
 
@@ -65,7 +65,7 @@ In Neerlaand kö'j n otter zeen in disse dierntuinen:
 * [[Marters]]
 
 {{Bron|
-* [http://www.vriendenvandeotter.nl Stichting Vrienden van de Otter - Achtergrondinformatie en video]<!--geraadpleegd op 7 januari 2008-->
+* [http://www.vriendenvandeotter.nl/ Stichting Vrienden van de Otter - Achtergrondinformatie en video]<!--geraadpleegd op 7 januari 2008-->
 * [http://www.staatsbosbeheer.nl/Nieuws%20en%20achtergronden/Dossiers/Otters.aspx Staatsbosbeheer en de terugkeer van de otter]<!--geraadpleegd op 16 maart 2010-->
 * [http://www.otter.wur.nl Wageningen UR - Monitoring herintroductie van de otter]<!--geraadpleegd op 7 januari 2008-->
 
