Verwysing nå döärverwyssyde repareerd ([[Twents]] nå [[Tweants]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Twentse_Jazzerieje.mw
+++ b/Twentse_Jazzerieje.mw
@@ -1,4 +1,4 @@
-De '''Twentse Jazzerieje''' is sind [[2011]] n vast onnerdeel van t [[International Jazz Festival]] in [[Eanske]]. Veur de Jazzerieje wordt alle joaren tien neje leedkes in t [[Twents]] (en sind [[2012]] ok annere [[Oaveriessel]]se [[dialekt]]n) skrevven, woarop dan weer muziek skrevven wörd wat oetvoord wörd deur n jazzkombo.
+De '''Twentse Jazzerieje''' is sind [[2011]] n vast onnerdeel van t [[International Jazz Festival]] in [[Eanske]]. Veur de Jazzerieje wordt alle joaren tien neje leedkes in t [[Tweants|Twents]] (en sind [[2012]] ok annere [[Oaveriessel]]se [[dialekt]]n) skrevven, woarop dan weer muziek skrevven wörd wat oetvoord wörd deur n jazzkombo.
 
 Oet veurroondes wordt tien zängers en zängeressen keuzn, woarmet tien tekstskrievers nen tekst goat skrievn. Dizze tekste wordt doarnoa deurgevven an tien muziekskrievers, dee doarop muziek skrievt, in ovverleg met de zängers en zängeressen en de tekstskrievers. Tiedns t International Jazz Festival wörd dan de finale höaldn met de neje leedkes. De muziek wörd oetvoord deur studeantn van t ArtEZ [[Konservatorium]] oet Eanske.
 
