Verwysing nå döärverwyssyde repareerd ([[Gruningen]] nå [[Grunnen (stad)]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Frans_de_Waal.mw
+++ b/Frans_de_Waal.mw
@@ -1,10 +1,10 @@
-[[Bestaand:Frans de Waal.jpg|200px|duum|rechts|Frans de Waal]]
+[[Bestaand:Frans de Waal.jpg|200px|duum|Frans de Waal]]
 '''Fransiscus Bernardus Maria (Frans) de Waal''' ([['s-Hertogenbosch (gemeente)|'s-Hertogenbosch]], [[29 oktober]] [[1948]]) is 'n Nederlaanse bioloog. Hi'j is specialiseerd in de [[primatologie]] en de [[ethologie]]. Op zien vakgebied wödt e ziene as veuranstaond.
 
 ==Levensloop==
 De Waal hef veule universiteiten in de jaoren achter zich elaoten, hieronder he-j al 'n mooie lieste, met nie allene zien universiteiten, maor ok wukke waor hi'j les-gef (hef), zien onderscheidingen, wat e onderzuch hef en gao maor vedder.
 
-As eerst studeren hi'j in [[Nijmegen]] en [[Gruningen]] en promoveerden in 1977 an de [[Universiteit Utrecht]].
+As eerst studeren hi'j in [[Nijmegen]] en [[Grunnen (stad)|Gruningen]] en promoveerden in 1977 an de [[Universiteit Utrecht]].
 
 Van 1975 töt 1981 deud e onderzuuk an de chimpanseekolonie van [[Burgers Zoo]] te [[Arnhem]]. Sinds 1981 dut e weetschappelik onderzuuk in de V.S.. Mom'teel is hi'j as hoogleraar [[psychologie]] verbönden an de [[Emory universiteit]] in [[Atlanta]] en is hi'j directeur van 't [[Living Links Center]] van 't [[Yerkes National Researche Center]].
 
