--- a/Rieksvoarweg.mw
+++ b/Rieksvoarweg.mw
@@ -1,5 +1,5 @@
 [[Ofbeelding:Sluis Eefde hoog.jpg|thumb|250px|t [[Tweantekanaal|Tweantekanoal]] is ne rieksvoarweg.]]
-Ne '''rieksvoarweg''' ([[Neerlaands]]: ''rijksvaarweg'') is n [[kanoal]] öf [[revier|stroom]] den an-legd en önnerholdn is/wör deur [[Riekswoaterstoat]] in n öpdroch van de rieksoawerheaid. Ok de sluuze in disse voarwegn wört broekt en önnerholdn deur Riekswoaterstoat.
+Ne '''rieksvoarweg''' ([[Neerlaands]]: ''rijksvaarweg'') is n [[Knoal (woaterweg)|kanoal]] öf [[revier|stroom]] den an-legd en önnerholdn is/wör deur [[Riekswoaterstoat]] in n öpdroch van de rieksoawerheaid. Ok de sluuze in disse voarwegn wört broekt en önnerholdn deur Riekswoaterstoat.
 
 Nich alle [[heufdvoarweg|heufdvoarwegn]] bint Rieksvoarwegn. De kanöale in [[Grunnen (provìnzie)|Grunnen]] en [[Frieslaand]] (t [[Emskanoal]], [[Prinses Margrietkanoal]] en [[Van Starkenborghkanoal]] en de [[Gouwe]] in [[Zuud-Hollaand]] wör deur de previnsie beheard, t [[Hartelkanoal]] wör beheard deur de gemeante [[Rötterdaam|Rötterdamme]] en t [[Binnen-Ie]] wör beheard deur de gemeante [[Amsterdam|Amsterdamme]].
 
