Verwysing nå döärverwyssyde repareerd ([[Grunnen]] nå [[Grunnen (stad)]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Slag_op_de_Hardenbargerheade.mw
+++ b/Slag_op_de_Hardenbargerheade.mw
@@ -4,7 +4,7 @@ De '''Slag op de Hardenbargerheade''' (ook wal es den ''Vergettenen Veeldslag'' 
 ==Verloop==
 De eerst poar joar har et Saksiese deel van wat noe [[Nederlaand]] is nog niks gen last van den Tachtigjoarigen Oorlog. De [[watergeuzen]] vöchten veer joar laank an de kuste, vuurdet ze pas bie [[Den Brielle]] nen voot an wal kregen.
 
-Op den [[3 meert|darden meert]] van [[1580]] keus Stadholder [[Sjors van Lalaing]] (Groaf van Rennenbarg) vuur de Spaanse kaante. Umdet den regeerden oawer [[Grönningen]], [[Freeslaand]], [[Dreante]] en [[Oaweriessel]], warren de Stoatsen bange at alle Saksies-Nederlaandse steaden (met ne [[Rooms-Katholieke Karke|Roomske]] meerderheid) zin vuurbeeld volgen zollen en den opstaand van de Stoatsen neet meer zollen helpen. Doarumme beleagerden de Stoatsen [[Grunnen]] moandenlaank, woarbie as ze alle hulpe gebroeken konden. [[Filips van Hohenlohe]], nen leagerbaas, wol gearne trouwen met de dochter van [[Willem van Oranje]]. Det köm Van Oranje good oet. Hee veund et good, as Van Hohenlohe um helpen zol met alle vechterieje. Hohenlohe was net in [[Oldenzel]] en wör op [[15 juni]] op ereupen um met et beleg van Grönningen te helpen. 
+Op den [[3 meert|darden meert]] van [[1580]] keus Stadholder [[Sjors van Lalaing]] (Groaf van Rennenbarg) vuur de Spaanse kaante. Umdet den regeerden oawer [[Grönningen]], [[Freeslaand]], [[Dreante]] en [[Oaweriessel]], warren de Stoatsen bange at alle Saksies-Nederlaandse steaden (met ne [[Rooms-Katholieke Karke|Roomske]] meerderheid) zin vuurbeeld volgen zollen en den opstaand van de Stoatsen neet meer zollen helpen. Doarumme beleagerden de Stoatsen [[Grunnen (stad)|Grunnen]] moandenlaank, woarbie as ze alle hulpe gebroeken konden. [[Filips van Hohenlohe]], nen leagerbaas, wol gearne trouwen met de dochter van [[Willem van Oranje]]. Det köm Van Oranje good oet. Hee veund et good, as Van Hohenlohe um helpen zol met alle vechterieje. Hohenlohe was net in [[Oldenzel]] en wör op [[15 juni]] op ereupen um met et beleg van Grönningen te helpen. 
 
 Van Hohenlohe en zinne [[kavalerie]] maakten at he doarhen köm, mer bie [[Koevern|Koevorden]] heurden ze van et volk at der nen trop Spanjaarden oonder [[Maarten Schenk]] van [[Lingen]] noar [[Zwolle]] treuk. Doar warren de Zwollenoaren tegen den keunink in et gewear ekömmen. Hee dreeiden rap umme met zin leager en gung op [[Hardenbarg (stad)|Hardenbarg]] an. Op de ''venebrugge'', een dreug stukke laand tusken twee moerassen bie Hardenbarg (rechtevoort ne boerskop van Hardenbarg), tröffen de beide leagers mekaar. Hohenlohe heuld der gin rekkening met at zinne soldoaten doodmeu warren van et völle vechten en reaizen. Et leager begun dus al meu an de stried. 
 
