Verwysing nå döärverwyssyde repareerd ([[Grunnen]] nå [[Grunnen (provìnzie)]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Hennep.mw
+++ b/Hennep.mw
@@ -1,9 +1,9 @@
-[[Ofbeelding:Illustration_Cannabis_sativa0.jpg|thumb|right|300px|Tekening van de hennepplaante]]
-[[Ofbeelding:Cannabis_sativa.jpg|thumb|right|200px|Hennepplaanten]]
+[[Ofbeelding:Illustration Cannabis sativa0.jpg|thumb|300px|Tekening van de hennepplaante]]
+[[Ofbeelding:Cannabis sativa.jpg|thumb|200px|Hennepplaanten]]
 '''Hennep''' of '''kemp''' (''Cannabis sativa'') is ne eenjoarige plaante oet de [[hennepfamilie]] (''Cannabaceae''). Männelike en vröwelike hennep gröait ofzeunderlik ([[tweehuzig]]) van mekaar. As hennep blöait, komt der greunachtige blomen an. De [[meldroad]]blomen (männelik) van hennep gröait in pluume en de vröwelike [[staamper]]blomen gröait in [[oare]]n in de bladoksels. De grof ekartelde bladen zeent laank en dun met vief töt negen oetlopers te blad. De plaante kan tusken de een en veer meter hoge worden, wat ofhaank van et [[klimaat]].
 
 ===Broekboare delen===
-[[Ofbeelding:Hennepvezel_Cannabis_sativa_fibre.jpg|thumb|right|200px|Een fuske hennepvezels]]
+[[Ofbeelding:Hennepvezel Cannabis sativa fibre.jpg|thumb|200px|Een fuske hennepvezels]]
 *Vezels. De vezels van de hennepbast zeent onmeundig laank en staark. Ze köant eenvooldig van de plaante lösmaakt worden, as ze nog neet opdreugd zeent. Met de vezels wörd van vroger oet [[touw]] emaakt of [[textiel]] ewöawen.
 *Zoad. Hennepzoad is te etten. Et is gezoond vuur leu en deers. Onbewaarkt wörd et as veugelzoad broekt met de name [[kempzoad]]. Kempzoad waarket op zangveugel etzelfde as [[hawer]] op [[peard]]e. Viskers broekt et zoad as voor. Oet et zoad kan [[hennepöllie]] parst worden.
 *Hoolt. De hennepplaante hef ongevear 60% an hooltige delen. Disse köant denen as stro vuur [[knaagdeers]] en pearde. Et braandt best en der blif weanig aske van oawer, zodet et ne beste vervanger vuur braandhoolt is. Doarnöast wörd et hennephoolt gebroekt vuur bouwen met hennep en [[kalk]]. Dit steet bekeand as [[lime-hemp beton]] of "hempcrete" in et [[Engels]] en as "Betón de chanvre" in et [[Fraans]]k.
@@ -17,7 +17,7 @@ In [[Duutslaand]] doot ze hennepoettreksels in [[beer]]. In wat aandere laanden 
 Hennepzoad wörd zeen as ''superfood'', umdet et et eawenwicht van et vetzoer good heuld en umdet der gode [[eiwit]]ten in zit.
 
 ===Vezels===
-In et [[Grunnen|Grönningse]] [[Olde Pekela]] zitt twee bedriewe dee as met hennepdröade doot: HempFlax en Dun Agro. Disse bedriewe hebt völle boeren in deenst dee as oonder kontrakt hennep as tuskengewas kweekt. Et grötste andeel bastvezel wörd exporteerd. Et oawerbliefsel wörd verkocht as deerstreuisel. 
+In et [[Grunnen (provìnzie)|Grönningse]] [[Olde Pekela]] zitt twee bedriewe dee as met hennepdröade doot: HempFlax en Dun Agro. Disse bedriewe hebt völle boeren in deenst dee as oonder kontrakt hennep as tuskengewas kweekt. Et grötste andeel bastvezel wörd exporteerd. Et oawerbliefsel wörd verkocht as deerstreuisel. 
 
 *Stro - Hennepvezel kan in neet-bewaarkten vörm broekt wörden as boadembedekking vuur stallen en deerhukke. Den vezel is lecht en neamp fleenk vocht en locht op. Doarnöast is et slietstaark en krie'j gin drek oonderin de hukke. As de deers dervan goat etten kan et ook gin kwoad. Hennep is good te vertearen.
 *Vezel - vuur et ofdichten van koppelingen van piepen, duur um de skroefdröade hennepvezels te wikkelen. As ze nat wordt, zwelt de vezels en sloett de kieren of. Rechtevoort gef et spesjale knelkoppelstukken, woerduur as hennep hier neet mear neudig is.
@@ -54,5 +54,5 @@ In de deelstoat [[Ontario]] in [[Kanada]] wörd hennep wal es kweekt as natuurli
 ==Verzakkingsbestrieding===
 In [[Azië]] wör kannabis broekt as weendskaarm. De wörtel van kannabis gröait zo rechtopstoand det et de groond good vaste heuld tegen verzakking. Ook in Nederlaand en België wörd et wal es broekt as weendskaarm en 'rikken'.
 
-[[Kategorie: Tweants artikel]]
-[[Kategorie: Plaante]]
+[[Kategorie:Tweants artikel]]
+[[Kategorie:Plaante]]
