Verwysing nå döärverwyssyde repareerd ([[Grunnen]] nå [[Grunnen (stad)]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Weperbult.mw
+++ b/Weperbult.mw
@@ -3,9 +3,9 @@ De '''Weperbult''' is een veurmaolig vuilstortpalk in et buurschop [[Weper]] in 
 Naost de bult staot een waeterzuvering, die et waeter uut de bult zuvert. De gassen die daorbi'j vri'jkommen wodden verbraand en tiedens dat proses wodt elektrisiteit wunnen. De waarmte wodt bruukt om gebouwen mit te verwaarmen.
 
 == Uutzicht ==
-Mit een hoogte van zo'n 25 meter hej' bi'j helder weer een wied uutzicht op de Weperbult. In et noordoosten is et [[Fochtelervene]] te zien mit daorachter [[Assen]]. In et oosten is de televisietoren van Smilde te zien. In et noordwesten et Gasuniegebouw in [[Grunnen]] en in et zuden de bebouwing van [[De Fochtel]] en [[Oosterwoolde]].
+Mit een hoogte van zo'n 25 meter hej' bi'j helder weer een wied uutzicht op de Weperbult. In et noordoosten is et [[Fochtelervene]] te zien mit daorachter [[Assen]]. In et oosten is de televisietoren van Smilde te zien. In et noordwesten et Gasuniegebouw in [[Grunnen (stad)|Grunnen]] en in et zuden de bebouwing van [[De Fochtel]] en [[Oosterwoolde]].
 
-[[Ofbeelding:Panorama_vanaf_de_Weperbult.JPG|thumb|center|700px|<center>Panorama vanaf de Weperbult</center>]]
+[[Ofbeelding:Panorama vanaf de Weperbult.JPG|thumb|center|700px|<center>Panorama vanaf de Weperbult</center>]]
 
 [[Kategorie:Stellingwarfs artikel]]
 [[Kategorie:Stellingwarven]]
