Verwysing nå döärverwyssyde repareerd ([[Grönningn]] nå [[Grunnen (provìnzie)]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Twentse_Jazzerieje.mw
+++ b/Twentse_Jazzerieje.mw
@@ -5,7 +5,7 @@ Oet veurroondes wordt tien zängers en zängeressen keuzn, woarmet tien tekstskr
 t Festival wörd regeld deur Theaterburo Mélange in saamnwearking met de Proveensie [[Oaveriessel]].
 
 ==Geskiedenis==
-In [[2011]] wör de Jazzerieje veur t eerst organiseerd. De finale wör höaldn op 11 juni op de [[Oale Maarkt]] in Eanske. Disse jazzerieje wör wunn deur [[Merel Moelker]] oet [[Grönningn]], met t nummer ''Stekkelhöarig'', wat skrevven wör deur [[Laurens ten Den]], en de muziek was van [[Rob Horsting]]. Deur heavigen reagn mos de jazzerieje n half uur staakt wordn. Tiedns t juryberoad treud [[Martijje]] oet [[Dreante]] op.
+In [[2011]] wör de Jazzerieje veur t eerst organiseerd. De finale wör höaldn op 11 juni op de [[Oale Maarkt]] in Eanske. Disse jazzerieje wör wunn deur [[Merel Moelker]] oet [[Grunnen (provìnzie)|Grönningn]], met t nummer ''Stekkelhöarig'', wat skrevven wör deur [[Laurens ten Den]], en de muziek was van [[Rob Horsting]]. Deur heavigen reagn mos de jazzerieje n half uur staakt wordn. Tiedns t juryberoad treud [[Martijje]] oet [[Dreante]] op.
 
 In [[2012]] hadn ze dr better wear bie. Disse jazzerieje was oetbreidt töt heel Oaveriessel, in saamnwearking met de [[Iesselakademie]]. Hierdeur was dr ok n deelnemmer oet [[Zwolle]] in de finale kömn. Disse jazzerieje wör wunn deur [[Petra ter Denge]] oet [[Loster]], met t nummer ''Kræng'', wat skrevven wör deur [[Woolters|Martin ter Denge]], en muziek van [[Jan Wessels]].
 
