besteyt neet meyr

--- a/Twentse_Jazzerieje.mw
+++ b/Twentse_Jazzerieje.mw
@@ -1,13 +1,15 @@
-De '''Twentse Jazzerieje''' is sind [[2011]] n vast onnerdeel van t [[International Jazz Festival]] in [[Eanske]]. Veur de Jazzerieje wordt alle joaren tien neje leedkes in t [[Tweants|Twents]] (en sind [[2012]] ok annere [[Oaveriessel]]se [[dialekt]]n) skrevven, woarop dan weer muziek skrevven wörd wat oetvoord wörd deur n jazzkombo.
+De '''Twentse Jazzerieje''' was van [[2011]] töt [[2013]] een vast onnerdeel van t [[International Jazz Festival]] in [[Eanske]]. Veur de Jazzerieje wörden alle joaren tien neje leedkes in t [[Tweants|Twents]] (en sind [[2012]] ok annere [[Oaveriessel]]se [[dialekt]]n) skrevven, woarop dan weer muziek skrevven wör wat oetvoord wör deur n jazzkombo van [[konservatorium]]studenten.
 
-Oet veurroondes wordt tien zängers en zängeressen keuzn, woarmet tien tekstskrievers nen tekst goat skrievn. Dizze tekste wordt doarnoa deurgevven an tien muziekskrievers, dee doarop muziek skrievt, in ovverleg met de zängers en zängeressen en de tekstskrievers. Tiedns t International Jazz Festival wörd dan de finale höaldn met de neje leedkes. De muziek wörd oetvoord deur studeantn van t ArtEZ [[Konservatorium]] oet Eanske.
+Oet veurroondes wörden tien zängers en zängeressen keuzen, woarmet tien tekstskrievers nen tekst gungen skrieven. Dizze tekste wörden doarnoa deurgevven an tien muziekskrievers, dee doarop muziek skreven, in ovverleg met de zängers en zängeressen en de tekstskrievers. Op et International Jazz Festival wör dan de finale höalden met de neje leedkes. De muziek wör oetvoord deur studeanten van t ArtEZ [[Konservatorium]] oet Eanske.
 
-t Festival wörd regeld deur Theaterburo Mélange in saamnwearking met de Proveensie [[Oaveriessel]].
+Et festival wör regeld deur Theaterburo Mélange in samennwearking met de Proveensie [[Oaveriessel]]. Do as et Grolsch International Jazz Festival ophövven wör, skeiden de Jazzerieje der ok met oet.
 
 ==Geskiedenis==
-In [[2011]] wör de Jazzerieje veur t eerst organiseerd. De finale wör höaldn op 11 juni op de [[Oale Maarkt]] in Eanske. Disse jazzerieje wör wunn deur [[Merel Moelker]] oet [[Grunnen (provìnzie)|Grönningn]], met t nummer ''Stekkelhöarig'', wat skrevven wör deur [[Laurens ten Den]], en de muziek was van [[Rob Horsting]]. Deur heavigen reagn mos de jazzerieje n half uur staakt wordn. Tiedns t juryberoad treud [[Martijje]] oet [[Dreante]] op.
+In [[2011]] wör de Jazzerieje veur et eerst organiseerd. De finale wör höalden op 11 juni op de [[Oale Maarkt]] in Eanske. Disse jazzerieje wör wunnen deur [[Merel Moelker]] oet [[Grunnen (provìnzie)|Grönningen]], met et nummer ''Stekkelhöarig'', wat skrevven wör deur [[Laurens ten Den]], en de muziek was van [[Rob Horsting]]. Deur heavigen reagen mos de jazzerieje een half uur staakt worden. Tiedns et juryberoad treud [[Martijje]] oet [[Dreante]] op.
 
-In [[2012]] hadn ze dr better wear bie. Disse jazzerieje was oetbreidt töt heel Oaveriessel, in saamnwearking met de [[Iesselakademie]]. Hierdeur was dr ok n deelnemmer oet [[Zwolle]] in de finale kömn. Disse jazzerieje wör wunn deur [[Petra ter Denge]] oet [[Loster]], met t nummer ''Kræng'', wat skrevven wör deur [[Woolters|Martin ter Denge]], en muziek van [[Jan Wessels]].
+In [[2012]] hadden ze der better wear bie. Disse jazzerieje was oetbreidt töt heel Oaveriessel, in samenwearking met de [[Iesselakademie]]. Hierdeur köm der ok een deelnemmer oet [[Zwolle]] in de finale. Disse jazzerieje wör wunnen deur [[Petra ter Denge]] oet [[Loster]], met et nummer ''Kræng'', wat skrevven wör deur [[Woolters|Martin ter Denge]], op muziek van [[Jan Wessels]].
+
+De Jazzerieje van [[2013]] wör wunnen deur Arla Brandsma met et nummer ''Jazzerieje (De klokke liek)''. Et was skrevven döär [[Herman Kampman]] en op muziek zat deur [[Rik Elings]].
 
 ==Oetgoande koppeling==
 *[http://www.ijfe.nl/extramenu/Twentse_Jazzerieje/ Webstea van t International Jazz Festival]
