--- a/Herman_Kampman.mw
+++ b/Herman_Kampman.mw
@@ -1,4 +1,4 @@
-'''herman Kampman''' ([[Heldern]], [[1947]]) is nen [[dichtkunst|dichter]], [[skryver]] en grappenmaker uut [[Hellendoorn]], up de grense tüsken [[Salland]] en [[Twente]].
+'''Herman Kampman''' ([[Heldern]], [[1947]]) is nen [[dichtkunst|dichter]], [[skryver]] en grappenmaker uut [[Hellendoorn]], up de grense tüsken [[Salland]] en [[Twente]].
 
 Kampman was ooit sociokultureel warker, mär richten sik vanaf [[2000]] vulleydig up skryven. Et leevst düt he dat in syn eygene [[neadersassisk]], et sallandsk-twentske oavergangsdialekt van [[Healdern|Hellendoorn]]. Kampman skrivt körte verhalen, gedichten en leedtys. Van [[2014]] töt [[2015]] was hee gemeyndedichter van Heldern.
 
