--- a/Herman_Kampman.mw
+++ b/Herman_Kampman.mw
@@ -2,7 +2,7 @@
 
 Kampman was ooit sociokultureel warker, mär richten sik vanaf [[2000]] vulleydig up skryven. Et leevst düt he dat in syn eygene [[neadersassisk]], et sallandsk-twentske oavergangsdialekt van [[Healdern|Hellendoorn]]. Kampman skrivt körte verhalen, gedichten en leedtys. Van [[2014]] töt [[2015]] was hee gemeyndedichter van Heldern.
 
-Ouk düt he vöärdraegen uut eygen wark en hevt he verskillende teaterstükke up naam, sou as ''Doe Normaal, Dikkop!'' en ''Zoas't was''. Vöär den eyrsten nöm hee under deeselvde titel een leedtyd-CD up med gitarist Jan Niewold uut [[Nijverdal]] en drummer Peter Deiman uut [[Emmen]].
+Ouk düt he vöärdraegen uut eygen wark en hevt he verskillende teaterstükke up naam, sou as ''Doe Normaal, Dikkop!'' en ''Zoas't was''. Vöär den eyrsten nöm hee under deeselvde titel een leedtys-CD up med gitarist Jan Niewold uut [[Nijverdal]] en drummer Peter Deiman uut [[Emmen]].
 
 ==Pryse==
 Kampman hevt verskillende kulturele pryse up name:
