*Empty MediaWiki Message*

--- a/Herman_Kampman.mw
+++ b/Herman_Kampman.mw
@@ -1,6 +1,6 @@
 '''Herman Kampman''' ([[Heldern]], [[1947]]) is nen [[dichtkunst|dichter]], [[skryver]] en grappenmaker uut [[Hellendoorn]], up de grense tüsken [[Salland]] en [[Twente]].
 
-Kampman was ooit sociokultureel warker, mär richten sik vanaf [[2000]] vulleydig up skryven. Et leevst düt he dat in syn eygene [[neadersassisk]], et sallandsk-twentske oavergangsdialekt van [[Healdern|Hellendoorn]]. Kampman skrivt körte verhalen, gedichten en leedtys. Van [[2014]] töt [[2015]] was hee gemeyndedichter van Heldern.
+Kampman was ooit sociokultureel warker, mär richten sik vanaf [[2000]] vulleydig up skryven. Et leevst düt he dat in syn eygene [[heldersk]] [[neadersassisk]], et [[sallaands|sallandsk]]-[[tweants|twentske]] oavergangsdialekt van Hellendoorn. Kampman skrivt körte verhalen, gedichten en leedtys. Van [[2014]] töt [[2015]] was hee gemeyndedichter van Heldern.
 
 Ouk düt he vöärdraegen uut eygen wark en hevt he verskillende teaterstükke up naam, sou as ''Doe Normaal, Dikkop!'' en ''Zoas't was''. Vöär den eyrsten nöm hee under deeselvde titel een leedtys-CD up med gitarist Jan Niewold uut [[Nijverdal]] en drummer Peter Deiman uut [[Emmen]].
 
